Добавление поддержки пароля комнаты и хоста комнаты:
- Обновлён API, добавлены методы для комнаты с паролем
- Добавлено поле ввода пароля в форму регистрации в номере
- Отображение / скрытие поля ввода пароля в зависимости от требований к номеру
- Добавлен ввод пароля для создания режима комнаты
- Обновлена структура HTML для функциональности пароля
